[package]
name = "sled_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
csv = "1.3.1"
dashmap = "6.1.0"
rocket =  { version = "0.5.1", features = ["json"] }
rocket_okapi = { version = "0.9.0", features = ["swagger"] }
schemars = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sled = "0.34.7"
